# ProbePioneer

./: .gitignore  README.md  index.html
search_engine/: CMakeLists.txt  answers.json  config.json  requests.json
search_engine/googleTest/: CMakeLists.txt  searchServerClass.cpp  testInvertedIndexClass.cpp
search_engine/includes/: converterJson.h  invertedIndex.h  programInterface.h  relativeIndex.h
search_engine/resources/: file001.txt  file003.txt  file004.txt  file005.txt  file006.txt  file007.txt  file008.txt  file009.txt  file010.txt
search_engine/sourceFiles/: CMakeLists.txt  converterJson.cpp  invertedIndex.cpp  main.cpp  programInterface.cpp  relativeIndex.cpp
